--- a/portfolio.html
+++ b/portfolio.html
@@ -24,6 +24,13 @@
             </ul>
         </address>
     </header>
-    
+
+    <footer>
+        <a href="./index.html">
+            WebStudio
+            </a>
+            <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    </footer>
+
 </body>
 </html>
