--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           WEB<span class="studio">STUDIO</span>
         </a>
         <ul class="list">
-          <li><a class="link" href="">Studio</a></li>
+          <li><a class="link" href="./index.html">Studio</a></li>
           <li><a class="link" href="./portfolio.html">Portfolio</a></li>
           <li><a class="link" href="">Contacts</a></li>
         </ul>
