--- a/portfolio.html
+++ b/portfolio.html
@@ -4,62 +4,76 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
       <nav>
-        <a href="./index.html" class="logo">
-          <p class="web">WEB<span class="studio">STUDIO</span></p>
+        <a class="logo link" href="./index.html">
+          WEB<span class="studio">STUDIO</span>
         </a>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="./portfolio.html">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+        <ul class="list">
+          <li><a class="link" href="./index.html">Studio</a></li>
+          <li><a class="link" href="./portfolio.html">Portfolio</a></li>
+          <li><a class="link" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <address class="address">
+        <ul class="list">
+          <li>
+            <a class="link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
         </ul>
       </address>
     </header>
 
     <main>
       <section>
-        <h1>Filter</h1>
-        <ul>
-          <li><button type="button">All</button></li>
-          <li><button type="button">Web Site</button></li>
-          <li><button type="button">App</button></li>
-          <li><button type="button">Design</button></li>
-          <li><button type="button">Marketing</button></li>
+        <h1 class="visually-hidden">Filter</h1>
+        <ul class="list">
+          <li><button class="filter-button" type="button">All</button></li>
+          <li><button class="filter-button" type="button">Web Site</button></li>
+          <li><button class="filter-button" type="button">App</button></li>
+          <li><button class="filter-button" type="button">Design</button></li>
+          <li>
+            <button class="filter-button" type="button">Marketing</button>
+          </li>
         </ul>
       </section>
 
       <section>
-        <h2>Projects</h2>
-        <ul>
+        <h2 class="visually-hidden">Projects</h2>
+        <ul class="team list">
           <li>
             <img src="./images/bankapp.jpg" width="360" alt="Banking App" />
             <h3>Banking App Interface Concept</h3>
-            <p>App</p>
+            <p class="item">App</p>
           </li>
           <li>
             <img src="./images/cashpay.jpg" width="360" alt="Marketing" />
             <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <p class="item">Marketing</p>
           </li>
           <li>
             <img src="./images/mediapp.jpg" width="360" alt="Meditation App" />
             <h3>Meditation App</h3>
-            <p>App</p>
+            <p class="item">App</p>
           </li>
           <li>
             <img src="./images/taxiserv.jpg" width="360" alt="Taxi Service" />
             <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <p class="item">Marketing</p>
           </li>
           <li>
             <img
@@ -68,12 +82,12 @@
               alt="Screen Illustrations"
             />
             <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <p class="item">Design</p>
           </li>
           <li>
             <img src="./images/courses.jpg" width="360" alt="Online Courses" />
             <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <p class="item">Marketing</p>
           </li>
           <li>
             <img
@@ -82,12 +96,12 @@
               alt="Instagram Stories Concept"
             />
             <h3>Instagram Stories Concept</h3>
-            <p>Design</p>
+            <p class="item">Design</p>
           </li>
           <li>
             <img src="./images/orgfood.jpg" width="360" alt="Organic Food" />
             <h3>Organic Food</h3>
-            <p>Web Site</p>
+            <p class="item">Web Site</p>
           </li>
           <li>
             <img
@@ -96,17 +110,17 @@
               alt="Fresh Coffee"
             />
             <h3>Fresh Coffee</h3>
-            <p>Web Site</p>
+            <p class="item">Web Site</p>
           </li>
         </ul>
       </section>
     </main>
 
-    <footer>
-      <a href="./index.html" class="logo">
-        <p class="web">WEB<span class="studio">STUDIO</span></p>
+    <footer class="footer">
+      <a class="logo link" href="./index.html">
+        WEB<span class="studio-footer">STUDIO</span>
       </a>
-      <p>
+      <p class="item">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
