--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
         <a class="logo link" href="./index.html">
           WEB<span class="studio">STUDIO</span>
         </a>
-        <ul class="list">
+        <ul class="list header">
           <li><a class="link" href="./index.html">Studio</a></li>
           <li><a class="link" href="./portfolio.html">Portfolio</a></li>
           <li><a class="link" href="">Contacts</a></li>
         </ul>
       </nav>
       <address class="address">
-        <ul class="list">
+        <ul class="list item">
           <li>
             <a class="link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
