--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
       <nav>
         <a class="logo link" href="./index.html">
-          WEB<span class="studio">STUDIO</span>
+          WEB<span class="studio">Studio</span>
         </a>
         <ul class="list header">
           <li><a class="link" href="./index.html">Studio</a></li>
@@ -126,7 +126,7 @@
 
     <footer class="footer">
       <a class="logo link" href="./index.html">
-        WEB<span class="studio-footer">STUDIO</span>
+        WEB<span class="studio-footer">Studio</span>
       </a>
       <p class="item">
         Increase the flow of customers and sales for your business with digital
