--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
     <header>
       <nav>
         <a class="logo link" href="./index.html">
-          WEB<span class="studio">STUDIO</span>
+          WEB<span class="studio">Studio</span>
         </a>
         <ul class="list header">
           <li><a class="link" href="./index.html">Studio</a></li>
@@ -50,30 +50,26 @@
             <button class="filter-button" type="button">Marketing</button>
           </li>
         </ul>
-      </section>
-
-      <section>
-        <h2 class="visually-hidden">Projects</h2>
-        <ul class="team list">
+        <ul class="list team">
           <li>
             <img src="./images/bankapp.jpg" width="360" alt="Banking App" />
-            <h3>Banking App Interface Concept</h3>
-            <p class="item">App</p>
+            <h2>Banking App Interface Concept</h2>
+            <p class="item link">App</p>
           </li>
           <li>
             <img src="./images/cashpay.jpg" width="360" alt="Marketing" />
-            <h3>Cashless Payment</h3>
-            <p class="item">Marketing</p>
+            <h2>Cashless Payment</h2>
+            <p class="item link">Marketing</p>
           </li>
           <li>
             <img src="./images/mediapp.jpg" width="360" alt="Meditation App" />
-            <h3>Meditation App</h3>
-            <p class="item">App</p>
+            <h2>Meditation App</h2>
+            <p class="item link">App</p>
           </li>
           <li>
             <img src="./images/taxiserv.jpg" width="360" alt="Taxi Service" />
-            <h3>Taxi Service</h3>
-            <p class="item">Marketing</p>
+            <h2>Taxi Service</h2>
+            <p class="item link">Marketing</p>
           </li>
           <li>
             <img
@@ -81,13 +77,13 @@
               width="360"
               alt="Screen Illustrations"
             />
-            <h3>Screen Illustrations</h3>
-            <p class="item">Design</p>
+            <h2>Screen Illustrations</h2>
+            <p class="item link">Design</p>
           </li>
           <li>
             <img src="./images/courses.jpg" width="360" alt="Online Courses" />
-            <h3>Online Courses</h3>
-            <p class="item">Marketing</p>
+            <h2>Online Courses</h2>
+            <p class="item link">Marketing</p>
           </li>
           <li>
             <img
@@ -95,13 +91,13 @@
               width="360"
               alt="Instagram Stories Concept"
             />
-            <h3>Instagram Stories Concept</h3>
-            <p class="item">Design</p>
+            <h2>Instagram Stories Concept</h2>
+            <p class="item link">Design</p>
           </li>
           <li>
             <img src="./images/orgfood.jpg" width="360" alt="Organic Food" />
-            <h3>Organic Food</h3>
-            <p class="item">Web Site</p>
+            <h2>Organic Food</h2>
+            <p class="item link">Web Site</p>
           </li>
           <li>
             <img
@@ -109,8 +105,8 @@
               width="360"
               alt="Fresh Coffee"
             />
-            <h3>Fresh Coffee</h3>
-            <p class="item">Web Site</p>
+            <h2>Fresh Coffee</h2>
+            <p class="item link">Web Site</p>
           </li>
         </ul>
       </section>
@@ -118,7 +114,7 @@
 
     <footer class="footer">
       <a class="logo link" href="./index.html">
-        WEB<span class="studio-footer">STUDIO</span>
+        WEB<span class="studio-footer">Studio</span>
       </a>
       <p class="item">
         Increase the flow of customers and sales for your business with digital
