--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </ul>
       </nav>
       <address class="address">
-        <ul class="list item">
+        <ul class="list">
           <li>
             <a class="link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
@@ -93,9 +93,9 @@
         </ul>
       </section>
 
-      <section>
+      <section class="team">
         <h2 class="headlines">Our Team</h2>
-        <ul class="team list">
+        <ul class="list">
           <li>
             <img src="./images/card1.jpg" alt="Product Designer" width="264" />
             <h3>Mark Guerrero</h3>
