--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
         </ul>
       </nav>
       <address class="address">
-        <ul class="list item">
+        <ul class="list">
           <li>
             <a class="link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
@@ -50,7 +50,7 @@
             <button class="filter-button" type="button">Marketing</button>
           </li>
         </ul>
-        <ul class="list team">
+        <ul class="list team portfolio">
           <li>
             <img src="./images/bankapp.jpg" width="360" alt="Banking App" />
             <h2>Banking App Interface Concept</h2>
