--- a/index.html
+++ b/index.html
@@ -18,21 +18,23 @@
         <a class="logo link" href="./index.html">
           WEB<span class="studio">Studio</span>
         </a>
-        <ul class="list header">
-          <li><a class="link" href="./index.html">Studio</a></li>
-          <li><a class="link" href="./portfolio.html">Portfolio</a></li>
-          <li><a class="link" href="">Contacts</a></li>
+        <ul class="list">
+          <li><a class="link header" href="./index.html">Studio</a></li>
+          <li><a class="link header" href="./portfolio.html">Portfolio</a></li>
+          <li><a class="link header" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address class="address">
+      <address>
         <ul class="list">
           <li>
-            <a class="link" href="mailto:info@devstudio.com"
+            <a class="link address" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="link address" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
@@ -40,36 +42,36 @@
 
     <main>
       <section class="hero">
-        <h1>Effective Solutions for Your Business</h1>
+        <h1 class="hero-headline">Effective Solutions for Your Business</h1>
         <button class="hero-button" type="button">Order Service</button>
       </section>
 
-      <section class="advantages">
-        <h2 class="visually-hidden">Our advantages</h2>
+      <section>
+        <h2 class="advantages">Our advantages</h2>
         <ul class="list">
           <li>
-            <h3>Strategy</h3>
+            <h3 class="advantages-headline">Strategy</h3>
             <p class="item">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
+            <h3 class="advantages-headline">Punctuality</h3>
             <p class="item">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
+            <h3 class="advantages-headline">Diligence</h3>
             <p class="item">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
+            <h3 class="advantages-headline">Technologies</h3>
             <p class="item">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -98,7 +100,7 @@
         <ul class="list">
           <li>
             <img src="./images/card1.jpg" alt="Product Designer" width="264" />
-            <h3>Mark Guerrero</h3>
+            <h3 class="team-headline">Mark Guerrero</h3>
             <p class="item">Product Designer</p>
           </li>
           <li>
@@ -107,17 +109,17 @@
               alt="Frontend Developer"
               width="264"
             />
-            <h3>Tom Ford</h3>
+            <h3 class="team-headline">Tom Ford</h3>
             <p class="item">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/card3.jpg" alt="Marketing" width="264" />
-            <h3>Camila Garcia</h3>
+            <h3 class="team-headline">Camila Garcia</h3>
             <p class="item">Marketing</p>
           </li>
           <li>
             <img src="./images/card4.jpg" alt="UI Designer" width="264" />
-            <h3>Daniel Wilson</h3>
+            <h3 class="team-headline">Daniel Wilson</h3>
             <p class="item">UI Designer</p>
           </li>
         </ul>
@@ -128,7 +130,7 @@
       <a class="logo link" href="./index.html">
         WEB<span class="studio-footer">Studio</span>
       </a>
-      <p class="item">
+      <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
