--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
 
     <main>
       <section>
-        <h1 class="visually-hidden">Filter</h1>
+        <h1>Filter</h1>
         <ul class="list">
           <li><button class="filter-button" type="button">All</button></li>
           <li><button class="filter-button" type="button">Web Site</button></li>
@@ -50,63 +50,63 @@
             <button class="filter-button" type="button">Marketing</button>
           </li>
         </ul>
-        <ul class="list team portfolio">
-          <li>
+        <ul class="list portfolio">
+          <li class="link">
             <img src="./images/bankapp.jpg" width="360" alt="Banking App" />
             <h2>Banking App Interface Concept</h2>
-            <p class="item link">App</p>
+            <p class="item">App</p>
           </li>
-          <li>
+          <li class="link">
             <img src="./images/cashpay.jpg" width="360" alt="Marketing" />
             <h2>Cashless Payment</h2>
-            <p class="item link">Marketing</p>
+            <p class="item">Marketing</p>
           </li>
-          <li>
+          <li class="link">
             <img src="./images/mediapp.jpg" width="360" alt="Meditation App" />
             <h2>Meditation App</h2>
-            <p class="item link">App</p>
+            <p class="item">App</p>
           </li>
-          <li>
+          <li class="link">
             <img src="./images/taxiserv.jpg" width="360" alt="Taxi Service" />
             <h2>Taxi Service</h2>
-            <p class="item link">Marketing</p>
+            <p class="item">Marketing</p>
           </li>
-          <li>
+          <li class="link">
             <img
               src="./images/screenillustration.jpg"
               width="360"
               alt="Screen Illustrations"
             />
             <h2>Screen Illustrations</h2>
-            <p class="item link">Design</p>
+            <p class="item">Design</p>
           </li>
-          <li>
+          <li class="link">
             <img src="./images/courses.jpg" width="360" alt="Online Courses" />
             <h2>Online Courses</h2>
-            <p class="item link">Marketing</p>
+            <p class="item">Marketing</p>
           </li>
-          <li>
+          <li class="link">
             <img
               src="./images/insta.jpg"
               width="360"
               alt="Instagram Stories Concept"
             />
             <h2>Instagram Stories Concept</h2>
-            <p class="item link">Design</p>
+            <p class="item">Design</p>
           </li>
-          <li>
+          <li class="link">
             <img src="./images/orgfood.jpg" width="360" alt="Organic Food" />
             <h2>Organic Food</h2>
-            <p class="item link">Web Site</p>
+            <p class="item">Web Site</p>
           </li>
-          <li>
+          <li class="link">
             <img
               src="./images/freshcoffee.jpg"
               width="360"
               alt="Fresh Coffee"
             />
             <h2>Fresh Coffee</h2>
-            <p class="item link">Web Site</p>
+            <p class="item">Web Site</p>
           </li>
         </ul>
       </section>
@@ -116,7 +116,7 @@
       <a class="logo link" href="./index.html">
         WEB<span class="studio-footer">Studio</span>
       </a>
-      <p class="item">
+      <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
