Fix header in portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -18,21 +18,23 @@
         <a class="logo link" href="./index.html">
           WEB<span class="studio">Studio</span>
         </a>
-        <ul class="list header">
-          <li><a class="link" href="./index.html">Studio</a></li>
-          <li><a class="link" href="./portfolio.html">Portfolio</a></li>
-          <li><a class="link" href="">Contacts</a></li>
+        <ul class="list">
+          <li><a class="link header" href="./index.html">Studio</a></li>
+          <li><a class="link header" href="./portfolio.html">Portfolio</a></li>
+          <li><a class="link header" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address class="address">
+      <address>
         <ul class="list">
           <li>
-            <a class="link" href="mailto:info@devstudio.com"
+            <a class="link address" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="link address" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
