--- a/portfolio.html
+++ b/portfolio.html
@@ -24,15 +24,15 @@
           <li><a class="link header" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="address">
         <ul class="list">
           <li>
-            <a class="link address" href="mailto:info@devstudio.com"
+            <a class="link address-color" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="link address" href="tel:+110001111111"
+            <a class="link address-color" href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -118,7 +118,7 @@
       <a class="logo link" href="./index.html">
         WEB<span class="studio-footer">Studio</span>
       </a>
-      <p>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
