Fix portfolio color

--- a/portfolio.html
+++ b/portfolio.html
@@ -53,28 +53,49 @@
           </li>
         </ul>
         <ul class="list portfolio">
-          <li class="link">
-            <img src="./images/bankapp.jpg" width="360" alt="Banking App" />
+          <li>
+            <img
+              class="link"
+              src="./images/bankapp.jpg"
+              width="360"
+              alt="Banking App"
+            />
             <h2>Banking App Interface Concept</h2>
             <p class="item">App</p>
           </li>
-          <li class="link">
-            <img src="./images/cashpay.jpg" width="360" alt="Marketing" />
+          <li>
+            <img
+              class="link"
+              src="./images/cashpay.jpg"
+              width="360"
+              alt="Marketing"
+            />
             <h2>Cashless Payment</h2>
             <p class="item">Marketing</p>
           </li>
-          <li class="link">
-            <img src="./images/mediapp.jpg" width="360" alt="Meditation App" />
+          <li>
+            <img
+              class="link"
+              src="./images/mediapp.jpg"
+              width="360"
+              alt="Meditation App"
+            />
             <h2>Meditation App</h2>
             <p class="item">App</p>
           </li>
-          <li class="link">
-            <img src="./images/taxiserv.jpg" width="360" alt="Taxi Service" />
+          <li>
+            <img
+              class="link"
+              src="./images/taxiserv.jpg"
+              width="360"
+              alt="Taxi Service"
+            />
             <h2>Taxi Service</h2>
             <p class="item">Marketing</p>
           </li>
-          <li class="link">
+          <li>
             <img
+              class="link"
               src="./images/screenillustration.jpg"
               width="360"
               alt="Screen Illustrations"
@@ -82,13 +103,19 @@
             <h2>Screen Illustrations</h2>
             <p class="item">Design</p>
           </li>
-          <li class="link">
-            <img src="./images/courses.jpg" width="360" alt="Online Courses" />
+          <li>
+            <img
+              class="link"
+              src="./images/courses.jpg"
+              width="360"
+              alt="Online Courses"
+            />
             <h2>Online Courses</h2>
             <p class="item">Marketing</p>
           </li>
-          <li class="link">
+          <li>
             <img
+              class="link"
               src="./images/insta.jpg"
               width="360"
               alt="Instagram Stories Concept"
@@ -96,13 +123,19 @@
             <h2>Instagram Stories Concept</h2>
             <p class="item">Design</p>
           </li>
-          <li class="link">
-            <img src="./images/orgfood.jpg" width="360" alt="Organic Food" />
+          <li>
+            <img
+              class="link"
+              src="./images/orgfood.jpg"
+              width="360"
+              alt="Organic Food"
+            />
             <h2>Organic Food</h2>
             <p class="item">Web Site</p>
           </li>
-          <li class="link">
+          <li>
             <img
+              class="link"
               src="./images/freshcoffee.jpg"
               width="360"
               alt="Fresh Coffee"
