--- a/portfolio.html
+++ b/portfolio.html
@@ -52,96 +52,93 @@
             <button class="filter-button" type="button">Marketing</button>
           </li>
         </ul>
-        <ul class="list portfolio">
+        <ul class="list">
           <li>
-            <img
-              class="link"
-              src="./images/bankapp.jpg"
-              width="360"
-              alt="Banking App"
-            />
-            <h2>Banking App Interface Concept</h2>
-            <p class="item">App</p>
+            <a class="link portfolio" href=""
+              ><img src="./images/bankapp.jpg" width="360" alt="Banking App" />
+              <h2 class="portfolio-headline">Banking App Interface Concept</h2>
+              <p class="item">App</p></a
+            >
           </li>
           <li>
-            <img
-              class="link"
-              src="./images/cashpay.jpg"
-              width="360"
-              alt="Marketing"
-            />
-            <h2>Cashless Payment</h2>
-            <p class="item">Marketing</p>
+            <a class="link portfolio" href=""
+              ><img src="./images/cashpay.jpg" width="360" alt="Marketing" />
+              <h2 class="portfolio-headline">Cashless Payment</h2>
+              <p class="item">Marketing</p></a
+            >
           </li>
           <li>
-            <img
-              class="link"
-              src="./images/mediapp.jpg"
-              width="360"
-              alt="Meditation App"
-            />
-            <h2>Meditation App</h2>
-            <p class="item">App</p>
+            <a class="link portfolio" href=""
+              ><img
+                src="./images/mediapp.jpg"
+                width="360"
+                alt="Meditation App"
+              />
+              <h2 class="portfolio-headline">Meditation App</h2>
+              <p class="item">App</p></a
+            >
           </li>
           <li>
-            <img
-              class="link"
-              src="./images/taxiserv.jpg"
-              width="360"
-              alt="Taxi Service"
-            />
-            <h2>Taxi Service</h2>
-            <p class="item">Marketing</p>
+            <a class="link portfolio" href=""
+              ><img
+                src="./images/taxiserv.jpg"
+                width="360"
+                alt="Taxi Service"
+              />
+              <h2 class="portfolio-headline">Taxi Service</h2>
+              <p class="item">Marketing</p></a
+            >
           </li>
           <li>
-            <img
-              class="link"
-              src="./images/screenillustration.jpg"
-              width="360"
-              alt="Screen Illustrations"
-            />
-            <h2>Screen Illustrations</h2>
-            <p class="item">Design</p>
+            <a class="link portfolio" href=""
+              ><img
+                src="./images/screenillustration.jpg"
+                width="360"
+                alt="Screen Illustrations"
+              />
+              <h2 class="portfolio-headline">Screen Illustrations</h2>
+              <p class="item">Design</p></a
+            >
           </li>
           <li>
-            <img
-              class="link"
-              src="./images/courses.jpg"
-              width="360"
-              alt="Online Courses"
-            />
-            <h2>Online Courses</h2>
-            <p class="item">Marketing</p>
+            <a class="link portfolio" href=""
+              ><img
+                src="./images/courses.jpg"
+                width="360"
+                alt="Online Courses"
+              />
+              <h2 class="portfolio-headline">Online Courses</h2>
+              <p class="item">Marketing</p></a
+            >
           </li>
           <li>
-            <img
-              class="link"
-              src="./images/insta.jpg"
-              width="360"
-              alt="Instagram Stories Concept"
-            />
-            <h2>Instagram Stories Concept</h2>
-            <p class="item">Design</p>
+            <a class="link portfolio" href=""
+              ><img
+                src="./images/insta.jpg"
+                width="360"
+                alt="Instagram Stories Concept"
+              />
+              <h2 class="portfolio-headline">Instagram Stories Concept</h2>
+              <p class="item">Design</p></a
+            >
           </li>
           <li>
-            <img
-              class="link"
-              src="./images/orgfood.jpg"
-              width="360"
-              alt="Organic Food"
-            />
-            <h2>Organic Food</h2>
-            <p class="item">Web Site</p>
+            <a class="link portfolio" href=""
+              ><img src="./images/orgfood.jpg" width="360" alt="Organic Food" />
+              <h2 class="portfolio">Organic Food</h2>
+              <p class="item">Web Site</p></a
+            >
           </li>
           <li>
-            <img
-              class="link"
-              src="./images/freshcoffee.jpg"
-              width="360"
-              alt="Fresh Coffee"
-            />
-            <h2>Fresh Coffee</h2>
-            <p class="item">Web Site</p>
+            <a class="link portfolio" href=""
+              ><img
+                src="./images/freshcoffee.jpg"
+                width="360"
+                alt="Fresh Coffee"
+              />
+              <h2 class="portfolio-headline">Fresh Coffee</h2>
+              <p class="item">Web Site</p></a
+            >
           </li>
         </ul>
       </section>
