--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
 
       <section class="team">
         <h2 class="headlines">Our Team</h2>
-        <ul class="list">
+        <ul class="list team-headline">
           <li>
             <img src="./images/card1.jpg" alt="Product Designer" width="264" />
-            <h3 class="team-headline">Mark Guerrero</h3>
+            <h3>Mark Guerrero</h3>
             <p class="item">Product Designer</p>
           </li>
           <li>
