--- a/portfolio.html
+++ b/portfolio.html
@@ -125,7 +125,7 @@
           <li>
             <a class="link portfolio" href=""
               ><img src="./images/orgfood.jpg" width="360" alt="Organic Food" />
-              <h2 class="portfolio">Organic Food</h2>
+              <h2 class="portfolio-headline">Organic Food</h2>
               <p class="item">Web Site</p></a
             >
           </li>
