--- a/index.html
+++ b/index.html
@@ -109,17 +109,17 @@
               alt="Frontend Developer"
               width="264"
             />
-            <h3 class="team-headline">Tom Ford</h3>
+            <h3>Tom Ford</h3>
             <p class="item">Frontend Developer</p>
           </li>
           <li class="team-headline">
             <img src="./images/card3.jpg" alt="Marketing" width="264" />
-            <h3 class="team-headline">Camila Garcia</h3>
+            <h3>Camila Garcia</h3>
             <p class="item">Marketing</p>
           </li>
           <li class="team-headline">
             <img src="./images/card4.jpg" alt="UI Designer" width="264" />
-            <h3 class="team-headline">Daniel Wilson</h3>
+            <h3>Daniel Wilson</h3>
             <p class="item">UI Designer</p>
           </li>
         </ul>
