--- a/index.html
+++ b/index.html
@@ -98,28 +98,28 @@
       <section class="team">
         <h2 class="headlines">Our Team</h2>
         <ul class="list">
-          <li class="team-headline">
+          <li>
             <img src="./images/card1.jpg" alt="Product Designer" width="264" />
-            <h3>Mark Guerrero</h3>
+            <h3 class="team-headline">Mark Guerrero</h3>
             <p class="item">Product Designer</p>
           </li>
-          <li class="team-headline">
+          <li>
             <img
               src="./images/card2.jpg"
               alt="Frontend Developer"
               width="264"
             />
-            <h3>Tom Ford</h3>
+            <h3 class="team-headline">Tom Ford</h3>
             <p class="item">Frontend Developer</p>
           </li>
-          <li class="team-headline">
+          <li>
             <img src="./images/card3.jpg" alt="Marketing" width="264" />
-            <h3>Camila Garcia</h3>
+            <h3 class="team-headline">Camila Garcia</h3>
             <p class="item">Marketing</p>
           </li>
-          <li class="team-headline">
+          <li>
             <img src="./images/card4.jpg" alt="UI Designer" width="264" />
-            <h3>Daniel Wilson</h3>
+            <h3 class="team-headline">Daniel Wilson</h3>
             <p class="item">UI Designer</p>
           </li>
         </ul>
