--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@
       <section class="team">
         <h2 class="headlines">Our Team</h2>
         <ul class="list">
-          <li>
+          <li class="item-background">
             <img src="./images/card1.jpg" alt="Product Designer" width="264" />
             <h3 class="team-headline">Mark Guerrero</h3>
             <p class="item">Product Designer</p>
           </li>
-          <li>
+          <li class="item-background">
             <img
               src="./images/card2.jpg"
               alt="Frontend Developer"
@@ -112,12 +112,12 @@
             <h3 class="team-headline">Tom Ford</h3>
             <p class="item">Frontend Developer</p>
           </li>
-          <li>
+          <li class="item-background">
             <img src="./images/card3.jpg" alt="Marketing" width="264" />
             <h3 class="team-headline">Camila Garcia</h3>
             <p class="item">Marketing</p>
           </li>
-          <li>
+          <li class="item-background">
             <img src="./images/card4.jpg" alt="UI Designer" width="264" />
             <h3 class="team-headline">Daniel Wilson</h3>
             <p class="item">UI Designer</p>
